# asf-wms

./: .coveragerc  .env.deploy.example  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  .secrets.baseline  AGENTS.md  Makefile  README.md  manage.py  mypy.ini  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
api/: tests.py  tests_integration_filters.py  tests_permissions.py  tests_query_utils.py
asf_wms/: asgi.py  settings.py  test_runner.py  urls.py  wsgi.py
audits/: audit.config.yaml
contacts/: admin.py  capabilities.py  correspondent_recipient_promotion.py  destination_scope.py  models.py  querysets.py  rules.py  tagging.py
docs/: README.md  audit_2026-02-19.md  audit_email_flows_2026-02-20.md  audit_email_flows_2026-02-20_cloture.md  backlog.md  email_flows_target_matrix_2026-02-20.md  mvp_spec.md  operations.md  phases_0_3_recap.md  pythonanywhere_email_setup_step_by_step.md  release_checklist.md  scan_settings_v1_audit_plan_2026-02-20.md
frontend-next/: README.md  next.config.mjs  package-lock.json  package.json
templates/: home.html  password_help.html
wms/: account_request_handlers.py  admin.py  admin_account_request_approval.py  admin_badges.py  admin_billing.py  admin_carton_handlers.py  admin_contacts_contact_service.py  admin_contacts_crud.py  admin_contacts_destination_service.py  admin_contacts_duplicate_detection.py  admin_contacts_merge_service.py  admin_misc.py  admin_organization_roles_review.py  admin_permissions.py  admin_stockmovement_views.py  apps.py  auth_session.py  billing_calculations.py  (+218 more)
(+982 files in other folders)
